fix transition safari

--- a/mySitef.css
+++ b/mySitef.css
@@ -376,6 +376,7 @@ margin: -1rem;
 	font-size: 1.2rem;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .75rem;
@@ -467,6 +468,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -560,6 +562,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -652,6 +655,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -744,6 +748,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -837,6 +842,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -929,6 +935,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -1021,6 +1028,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -1205,6 +1213,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
@@ -1297,6 +1306,7 @@ margin: -1rem;
 	left: 0;
 	position: absolute;
 	transition: 2s;
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	border: .2rem solid white;
 	border-radius: .5rem;
